@@ -431,9 +431,11 @@ IF(NOT CMTK_USE_MPI)
   SET_TESTS_PROPERTIES(FilmMSDLinearNoTrunc PROPERTIES TIMEOUT 3600)
   SET_TESTS_PROPERTIES(FilmMISincRefSPGR PROPERTIES TIMEOUT 3600)
 
-  SET_TESTS_PROPERTIES(McAffine2 PROPERTIES TIMEOUT 1800)
-  SET_TESTS_PROPERTIES(McWarp1 PROPERTIES TIMEOUT 1800)
-  SET_TESTS_PROPERTIES(McWarp2 PROPERTIES TIMEOUT 1800)
+  IF(HAVE_STL_HASH_MAP)
+    SET_TESTS_PROPERTIES(McAffine2 PROPERTIES TIMEOUT 1800)
+    SET_TESTS_PROPERTIES(McWarp1 PROPERTIES TIMEOUT 1800)
+    SET_TESTS_PROPERTIES(McWarp2 PROPERTIES TIMEOUT 1800)
+  ENDIF(HAVE_STL_HASH_MAP)
 
   SET_TESTS_PROPERTIES(MrbiasAddMulMask PROPERTIES TIMEOUT 3600)
   SET_TESTS_PROPERTIES(MrbiasMulIncremental PROPERTIES TIMEOUT 3600)
