@@ -17,6 +17,8 @@ Release CMTK-1.1.3:
     memory checker.
 - Fixed: some more missing tests were added to the configuration of the
     bundled D(4)CMTK library.
+- Fixed: cmake file to set up tests when no hash map implementation is found
+    cannot set properties for mcwarp and mcaffine tests.
 
 - Improved: better, more data-drive automatic initialization of optimizer step
     sizes and image sampling parameters in pairwise rigid and nonrigid
